feat: add workflows

--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "predeploy": "nnpm run build",
-    "deploy": "gh-pages -d out"
+    "lint": "next lint"
   },
   "dependencies": {
     "@types/node": "18.15.11",
@@ -21,8 +19,5 @@
     "react-dom": "18.2.0",
     "sharp": "^0.32.0",
     "swr": "^2.1.1"
-  },
-  "devDependencies": {
-    "gh-pages": "^5.0.0"
   }
 }
