--- a/package.json
+++ b/package.json
@@ -19,5 +19,13 @@
     "react-dom": "^18.2.0",
     "sharp": "^0.32.0",
     "swr": "^2.1.3"
+  },
+  "devDependencies": {
+    "husky": "^8.0.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
