--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "@types/node": "18.15.11",
     "@types/react": "^18.0.35",
     "@types/react-dom": "18.0.11",
-    "eslint-config-next": "^13.4.1",
-    "next": "^13.4.1",
+    "eslint-config-next": "^13.4.9",
+    "next": "^13.4.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.32.0",
-    "swr": "^2.1.3"
+    "sharp": "^0.32.1",
+    "swr": "^2.2.0"
   },
   "devDependencies": {
-    "husky": "^8.0.3"
+    "husky": "^8.0.3",
+    "typescript": "5.1.6"
   },
   "husky": {
     "hooks": {
