--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "@types/react": "^18.0.35",
     "@types/react-dom": "18.0.11",
     "eslint-config-next": "^13.4.12",
-    "next": "^13.4.13",
+    "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.32.4",
-    "swr": "^2.2.0"
+    "sharp": "^0.32.5",
+    "swr": "^2.2.2"
   },
   "devDependencies": {
     "husky": "^8.0.3",
-    "typescript": "5.1.6"
+    "typescript": "^5.2.2"
   },
   "husky": {
     "hooks": {
