--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.35",
     "@types/react-dom": "18.0.11",
     "eslint-config-next": "^13.5.4",
+    "kill-port": "^2.0.1",
     "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
