--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,8 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-      time: "13:00"
+      time: "05:00"
+      timezone: "America/Sao_Paulo"
     open-pull-requests-limit: 10
     update-types:
       - "minor"
