--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,9 +3,8 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "tuesday"
-      time: "07:00"
+      interval: "daily"
+      time: "01:01"
       timezone: "America/Sao_Paulo"
     open-pull-requests-limit: 10
     labels:
