--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@next/third-parties": "^14.0.0",
     "@types/node": "18.15.11",
     "@types/react": "^18.2.33",
     "@types/react-dom": "18.2.14",
