--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@builder.io/partytown": "^0.8.1",
     "@next/third-parties": "^14.0.1",
-    "@types/node": "18.15.11",
+    "@types/node": "^20.8.10",
     "@types/react": "^18.2.34",
-    "@types/react-dom": "18.2.14",
+    "@types/react-dom": "^18.2.14",
     "eslint-config-next": "^14.0.1",
     "next": "^14.0.1",
     "react": "^18.2.0",
