--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "eslint-config-next": "^15.0.0",
-    "next": "^14.2.15",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "^15.0.0",
+    "react": "^19.0.0-rc-69d4b800-20241021",
+    "react-dom": "^19.0.0-rc-69d4b800-20241021",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
