--- a/package.json
+++ b/package.json
@@ -8,19 +8,18 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "dependencies": {
     "@builder.io/partytown": "^0.10.3",
     "@next/third-parties": "^15.5.4",
-    "@types/node": "^24.3.1",
+    "@types/node": "^24.7.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.1.9",
     "eslint-config-next": "^15.5.4",
-    "@types/node": "^24.7.0",
     "next": "^15.5.4",
     "react": "^19.2.0",
-    "react-dom": "^19.1.1",
+    "react-dom": "^19.2.0",
     "sharp": "^0.34.4"
   },
   "devDependencies": {
