--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,31 +1,48 @@
 {
   "editor.tabSize": 2,
   "editor.formatOnSave": true,
-  "prettier.singleQuote": true,
-  "eslint.alwaysShowStatus": true,
-  "typescript.tsdk": "node_modules\\typescript\\lib",
-  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true,
+    "source.fixAll.eslint": "explicit",
+    "source.organizeImports": "explicit"
   },
-  "emmet.includeLanguages": {
-    "javascript": "javascriptreact",
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "eslint.validate": ["javascriptreact"]
-}
-
-
-{
-  "editor.tabSize": 2,
-  "editor.formatOnSave": true,
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[javascriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
   "prettier.singleQuote": true,
+  "prettier.semi": true,
+  "prettier.tabWidth": 2,
+  "prettier.trailingComma": "es5",
   "eslint.alwaysShowStatus": true,
+  "eslint.workingDirectories": ["."],
+  "eslint.format.enable": true,
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact", 
+    "typescript",
+    "typescriptreact"
+  ],
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "typescript.preferences.organizeImportsCollation": "unicode",
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact"
+  },
   "search.exclude": {
     "**/.next": true,
-    "**/coverage": true
-  },
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  },
-  "eslint.packageManager": "yarn",
+    "**/coverage": true,
+    "**/node_modules": true
+  }
 }
