fix: resolve Next.js ESLint plugin detection and TypeScript build errors

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "ESLINT_USE_FLAT_CONFIG=false eslint .",
+    "lint:fix": "ESLINT_USE_FLAT_CONFIG=false eslint . --fix",
     "prepare": "husky"
   },
   "dependencies": {
