--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,21 +1,21 @@
 version = 1
 
+exclude_patterns = [
+  "node_modules/**",
+  ".next/**", 
+  "out/**",
+  "build/**",
+  "dist/**",
+  "*.min.js",
+  "*.d.ts",
+  "next-env.d.ts",
+  "tsconfig.tsbuildinfo"
+]
+
 [[analyzers]]
 name = "javascript"
+enabled = true
 
   [analyzers.meta]
   plugins = ["react"]
-  
-  skip_doc_coverage = ["module", "class", "function"]
-  
-  [analyzers.exclude_patterns]
-  - "node_modules/**"
-  - ".next/**"
-  - "out/**"
-  - "build/**"
-  - "dist/**"
-  - "*.min.js"
-  - "*.d.ts"
-  - "next-env.d.ts"
-  - "tsconfig.tsbuildinfo"
-  
+  environment = ["nodejs", "browser"]
