feat: improved deepsource

--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -21,3 +21,6 @@ enabled = true
   environment = ["nodejs", "browser"]
   skip_doc_coverage = true
   
+  [analyzers.ignore_rules]
+  # Ignore documentation requirements
+  - "JS-D1001"  # Documentation comments not found for functions and classes
