--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -19,6 +19,7 @@ enabled = true
   [analyzers.meta]
   plugins = ["react"]
   environment = ["nodejs", "browser"]
+  ignore_rules = ["JS-D1001"]
 
 [[analyzers]]
 name = "coverage"
