--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -7,11 +7,20 @@ exclude_patterns = [
   "build/**",
   "dist/**",
   "*.min.js",
-  "*.d.ts"
+  "*.d.ts",
+  "next-env.d.ts",
+  "tsconfig.tsbuildinfo"
 ]
 
 [[analyzers]]
 name = "javascript"
+enabled = true
 
-[analyzers.meta]
-plugins = ["react"]
+  [analyzers.meta]
+  plugins = ["react"]
+  environment = ["nodejs", "browser"]
+  ignore_rules = ["JS-D1001"]
+
+[[analyzers]]
+name = "coverage"
+enabled = false
