--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@builder.io/partytown": "^0.10.3",
-    "@next/third-parties": "^15.5.6",
+    "@next/third-parties": "^16.0.0",
     "@types/node": "^24.9.1",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "next": "^15.5.6",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
+    "next": "^16.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "sharp": "^0.34.4"
@@ -26,13 +25,13 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.37.0",
-    "@next/eslint-plugin-next": "^15.5.4",
+    "@next/eslint-plugin-next": "^16.0.0",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "autoprefixer": "^10.4.21",
     "cssnano": "^7.1.1",
     "eslint": "^9.38.0",
-    "eslint-config-next": "^15.5.6",
+    "eslint-config-next": "16.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.5",
@@ -41,5 +40,9 @@
     "postcss": "^8.5.6",
     "prettier": "^3.3.3",
     "typescript": "^5.8.3"
+  },
+  "resolutions": {
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2"
   }
 }
