--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.2.1",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": "23.x"
+  },
   "homepage": "https://rodcast.github.io/rodcast.github.io",
   "scripts": {
     "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 next dev --turbo",
