--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
+    "@vercel/speed-insights": "^1.3.1",
     "next": "^16.0.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
