--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,5 @@
 {
   "version": 2,
-  "name": "rodcast-github-io",
-  "builds": [
-    {
-      "src": "index.html",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ]
+  "buildCommand": "yarn run build",
+  "framework": "nextjs"
 }
